feat: display header and footer on page

--- a/src/styles/_main.less
+++ b/src/styles/_main.less
@@ -4,13 +4,13 @@
 @import (once) "./helpers";
 @import (once) "./core";
 
-// @import (once) "../../layout/_partials/featured-image/featured-image";
-// @import (once) "../../layout/_partials/footer/footer";
-// @import (once) "../../layout/_partials/header/header";
-// @import (once) "../../layout/_partials/sociallinks/sociallinks";
-// @import (once) "../../layout/_partials/taglist/taglist";
-// @import (once) "../../layout/_partials/testimonials/testimonials";
-// @import (once) "../../layout/_partials/vimeo/vimeo";
+@import (once) "../components/featured-image/featured-image";
+@import (once) "../components/footer/footer";
+@import (once) "../components/header/header";
+@import (once) "../components/sociallinks/sociallinks";
+@import (once) "../components/taglist/taglist";
+@import (once) "../components/testimonials/testimonials";
+@import (once) "../components/vimeo/vimeo";
 
 // @import (once) "../../styles/views/category";
 // @import (once) "../../styles/views/contact";
