feat: add assets

--- a/src/views/_base.html
+++ b/src/views/_base.html
@@ -44,5 +44,18 @@
 		</main>
 
 		{% include 'components/footer/footer.html' %}
+		<script src="/fontfaceobserver.js"></script>
+		<script>
+		
+			var font = new FontFaceObserver('Fira Code');
+
+			font.load()
+				.then(function () {
+					document.documentElement.className += " fonts-loaded";
+				})
+				.catch(function(err) {
+					document.documentElement.className += " fonts-not-loaded";
+				});
+		</script>
 	</body>
 </html>
