feat(home): add content

--- a/src/styles/_main.less
+++ b/src/styles/_main.less
@@ -14,4 +14,4 @@
 
 // @import (once) "../../styles/views/category";
 // @import (once) "../../styles/views/contact";
-// @import (once) "../../styles/views/home";
+@import (once) "./views/home";
