--- a/src/views/_base.html
+++ b/src/views/_base.html
@@ -36,7 +36,7 @@
 		{% endblock %}
 	</head>
 
-	<body>
+	<body class="{{ page.title.toLowerCase() }}">
 		{% include 'components/header/header.html' %}
 
 		<main>
