chore: add highlightjs to build process

--- a/src/styles/typography.less
+++ b/src/styles/typography.less
@@ -101,6 +101,18 @@ button {
 	font-size: 1rem;
 }
 
+pre code {
+	width: 100%;
+	color: white;
+	background-color: #263238;
+	font-family: @monospace;
+	display: block;
+}
+
+.fonts-loaded code {
+	font-family: @monospace-prefered;
+}
+
 @media screen {
 	h1, .h1 {
 		&:before {
