refactor: tweak styling

--- a/src/styles/core.less
+++ b/src/styles/core.less
@@ -8,7 +8,6 @@ img {
 
 picture {
 	display: block;
-	// max-width: 100vw;
 }
 
 
@@ -32,4 +31,6 @@ picture {
 	background-color: @background-color-header;
 	padding-top: 1rem;
 	padding-bottom: 1rem;
+	padding-left: 0;
+	padding-right: 0;
 }
