chore: add autoprefixer, cleancss and sourcemaps

--- a/src/styles/_main.less
+++ b/src/styles/_main.less
@@ -1,3 +1,4 @@
+@import (less)  "./../../node_modules/highlight.js/styles/monokai-sublime.css";
 @import (once) "./variables";
 @import (once) "./reset";
 @import (once) "./typography";
