--- a/src/styles/_main.less
+++ b/src/styles/_main.less
@@ -15,4 +15,4 @@
 
 // @import (once) "../../styles/views/category";
 // @import (once) "../../styles/views/contact";
-@import (once) "./views/home";
+@import (once) "../views/home";
