feat: add javascript workflow

--- a/src/components/header/header.html
+++ b/src/components/header/header.html
@@ -1,4 +1,4 @@
-<header>
+<header data-header>
 <div class="page-header">
 	<h1 class="page-header__title">
 		<a href="/" class="page-header__link">
