--- a/src/views/_base.html
+++ b/src/views/_base.html
@@ -36,6 +36,8 @@
 		{% endblock %}
 
 		{% include 'components/font-face-observer/head.html' %}
+
+		<script src="/js/bundle.js" async></script>
 	</head>
 
 	<body class="{{ page.title.toLowerCase() }}">
