refactor: fade content on async content loading

--- a/src/styles/_main.less
+++ b/src/styles/_main.less
@@ -5,6 +5,7 @@
 @import (once) "./helpers";
 @import (once) "./core";
 
+@import (once) "../components/_helpers/async-content-loader/async-content-loader";
 @import (once) "../components/footer/footer";
 @import (once) "../components/header/header";
 @import (once) "../components/sociallinks/sociallinks";
