chore: add manifest task

--- a/src/views/_base.html
+++ b/src/views/_base.html
@@ -3,6 +3,8 @@
 	<head>
 		<title>{% if page.path === 'index'%}{{ site.title }} | {{ site.subtitle }}{% else %}{{ page.title }} | {{ site.title }}{% endif %}</title>
 		
+		<link rel="manifest" href="/web-manifest.json">
+
 		<link rel="dns-prefetch" href="http://www.gravatar.com/">
 
 		<link rel="me" href="{{ site.social.googlePlus.url }}">
