feat: add icons

--- a/src/views/_base.html
+++ b/src/views/_base.html
@@ -5,11 +5,9 @@
 		
 		<link rel="manifest" href="/web-manifest.json">
 
-		<link rel="dns-prefetch" href="http://www.gravatar.com/">
-
 		<link rel="me" href="{{ site.social.googlePlus.url }}">
 		<link rel="canonical" href="{{ page.permalink }}">
-		<link rel="shortcut icon" href="{{ site.gravatar }}" />
+		<link rel="shortcut icon" href="/logo/logo-32.png" />
 		
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 		
