refactor: place assets in assets folder

--- a/src/components/font-face-observer/footer.html
+++ b/src/components/font-face-observer/footer.html
@@ -8,7 +8,7 @@
 		
 		function loadFontfaceObserver() {
 			var script = document.createElement('script');
-			script.src = '/fontfaceobserver.js';
+			script.src = '/assets/fontfaceobserver.js';
 			script.async = true;
 			script.onload = function scriptOnLoad() {
 				var fonts = [
