--- a/src/views/_base.html
+++ b/src/views/_base.html
@@ -7,7 +7,7 @@
 
 		<link rel="me" href="{{ site.social.googlePlus.url }}">
 		<link rel="canonical" href="{{ page.permalink }}">
-		<link rel="shortcut icon" href="/logo/logo-32.png" />
+		<link rel="shortcut icon" href="/assets/logo/logo-32.png" />
 		
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 		
