refactor: tweak code styling

--- a/src/styles/variables.less
+++ b/src/styles/variables.less
@@ -8,7 +8,7 @@
 @screen-medium: 64em; // 1024px
 @screen-large: 90em; // 1440px
 
-@char-width: 0.6rem;
+@char-width: 0.625rem;
 @line-height: 1.75rem;
 
 @default-margin: 3rem;
@@ -21,3 +21,4 @@
 @link-color: #1976D2;
 @error-color: #F44336;
 @success-color: #8BC34A;
+@inline-code-color: #fa516d;
