--- a/src/styles/typography.less
+++ b/src/styles/typography.less
@@ -116,13 +116,26 @@ pre code {
 	background-color: @background-color-header;
 	font-family: @monospace;
 	display: block;
+	border-radius: initial;
+
+	&:before,
+	&:after {
+		content: initial;
+	}
 }
 
-p > code {
-	background-color: @background-color-header;
-	color: @background-color;
-	padding: 0.25em 0.5em;
-	border-radius: 0.25em;
+code {
+	color: @inline-code-color;
+
+	&:before {
+		content: '`';
+		opacity: @markdown-decoration-fade;
+	}
+
+	&:after {
+		content: '`';
+		opacity: @markdown-decoration-fade;
+	}
 }
 
 .fonts-loaded code {
@@ -216,6 +229,7 @@ p > code {
 	ul,
 	ol {
 		list-style: none;
+		margin-bottom: @line-height;
 	}
 
 	li:before {
