refactor: put code colors in variables

--- a/src/components/footer/footer.less
+++ b/src/components/footer/footer.less
@@ -3,12 +3,12 @@
 	padding-top: @default-margin * .5;
 	padding-bottom: @default-margin * .5;
 
-	background-color: @background-color-header;
-	color: #BED5DD;
+	background-color: @code-background;
+	color: @dark-background-text;
 
 	a:before,
 	a:after {
-		color: #BED5DD;
+		color: @dark-background-text;
 	}
 
 	p {
