--- a/src/styles/core.less
+++ b/src/styles/core.less
@@ -1,5 +1,5 @@
 html {
-	background-color: @background-color-header;
+	background-color: @code-background;
 }
 
 img {
@@ -22,7 +22,7 @@ main {
 .hljs-wrapper:before {
 	content: '';
 	position: absolute;
-	background-color: @background-color-header;
+	background-color: @code-background;
 	width: 150%;
 	height: 100%;
 	left: 50%;
@@ -32,7 +32,7 @@ main {
 
 .hljs {
 	position: relative;
-	background-color: @background-color-header;
+	background-color: @code-background;
 	padding-top: 1rem;
 	padding-bottom: 1rem;
 	padding-left: 0;
