--- a/src/styles/typography.less
+++ b/src/styles/typography.less
@@ -113,7 +113,7 @@ button {
 pre code {
 	width: 100%;
 	color: @background-color;
-	background-color: @background-color-header;
+	background-color: @code-background;
 	font-family: @monospace;
 	display: block;
 	border-radius: initial;
