--- a/src/styles/variables.less
+++ b/src/styles/variables.less
@@ -17,8 +17,22 @@
 @alert-fade: 50%;
 @default-text-color: #444444;
 @background-color: #FAFAFA;
-@background-color-header: #263238;
+@dark-background-text: #BED5DD;
 @link-color: #1976D2;
 @error-color: #F44336;
 @success-color: #8BC34A;
 @inline-code-color: #fa516d;
+
+// code highlight
+@code-background: #263238;
+@code-comment: #61737e;
+@code-selector: #FFD47E;
+@code-property: #8FD2CE;
+@code-value: #BED5DD;
+@code-text: #DEE3E9;
+@code-attribute: #98E3FF;
+@code-element: #FA516D;
+@code-string: #CAE69C;
+@code-keyword: #c792ea;
+@code-number: #f78556;
+@code-regex: #69a5ff;
