--- a/src/views/home.less
+++ b/src/views/home.less
@@ -1,12 +1,12 @@
 .my-vision {
-	background-color: @background-color-header;
+	background-color: @code-background;
 }
 .my-vision__quote {
 	.content-section;
 	padding-bottom: @default-margin;
 	margin-bottom: @default-margin;
 
-	color: #C792EA;
+	color: @code-keyword;
 
 	blockquote {
 		border: none;
@@ -14,15 +14,15 @@
 }
 
 .my-vision__variable {
-	color: #BDD3DC;
+	color: @code-text;
 }
 
 .my-vision__text {
-	color: #C792EA;
+	color: @code-keyword;
 }
 
 @media screen and (min-width: @screen-xsmall) {
 	.my-vision__text {
-		color: #CAE69C;
+		color: @code-string;
 	}
 }
