--- a/src/styles/typography.less
+++ b/src/styles/typography.less
@@ -55,11 +55,11 @@ body {
 	line-height: @line-height;
 }
 h2, .h2 {
-	margin-top: 4rem;
+	margin-top: @line-height * 2;
 }
 
 h3, .h3 {
-	margin-top: 2rem;
+	margin-top: @line-height;
 }
 
 p {
