--- a/src/views/_base.html
+++ b/src/views/_base.html
@@ -49,5 +49,7 @@
 
 		{% include 'components/footer/footer.html' %}
 		{% include 'components/font-face-observer/footer.html' %}
+
+		<div class="debug-vertial-rythm"></div>
 	</body>
 </html>
