--- a/src/styles/core.less
+++ b/src/styles/core.less
@@ -27,14 +27,18 @@ main {
 	height: 100%;
 	left: 50%;
 	transform: translateX(-50%);
-	max-width: 95vw;
+	max-width: 100vw;
+
+	@media screen and (min-width: @screen-small) {
+		max-width: 95vw;
+	}
 }
 
 .hljs {
 	position: relative;
 	background-color: @code-background;
-	padding-top: 1rem;
-	padding-bottom: 1rem;
+	padding-top: @line-height;
+	padding-bottom: @line-height;
 	padding-left: 0;
 	padding-right: 0;
 }
