chore: remove @margin-default, add @margin-s,m,l

--- a/src/components/footer/footer.less
+++ b/src/components/footer/footer.less
@@ -1,7 +1,7 @@
 .footer {
-	margin-top: @default-margin;
-	padding-top: @default-margin * .5;
-	padding-bottom: @default-margin * .5;
+	margin-top: @margin-m;
+	padding-top: @margin-s;
+	padding-bottom: @margin-s;
 
 	background-color: @code-background;
 	color: @dark-background-text;
