--- a/src/styles/pages/contact.less
+++ b/src/styles/pages/contact.less
@@ -1,9 +1,10 @@
 .contact__form {
-	margin-bottom: @default-margin;
+	margin-top: @margin-m;
+	margin-bottom: @margin-m;
 }
 
 .contact__form__element {
-	margin-bottom: 1rem;
+	margin-bottom: @margin-s;
 }
 
 .contact__form__element:before{
@@ -17,7 +18,7 @@
 .contact__form__input {
 	display: block;
 	width: 100%;
-	padding: 0.75rem;	
+	padding: 0.25rem;
 }
 
 
@@ -31,6 +32,6 @@
 	}
 
 	.contact__form__submit {
-		margin-left: 9.15rem;
+		margin-left: 9.85rem;
 	}
 }
