--- a/src/views/home.less
+++ b/src/views/home.less
@@ -3,8 +3,8 @@
 }
 .my-vision__quote {
 	.content-section;
-	padding-bottom: @default-margin;
-	margin-bottom: @default-margin;
+	padding-bottom: @margin-m;
+	margin-bottom: @margin-m;
 
 	color: @code-keyword;
 
