--- a/src/components/header/header.less
+++ b/src/components/header/header.less
@@ -20,7 +20,7 @@ body > header {
 
 .page-header__title,
 .page-header__nav {
-	padding-bottom: @default-margin / 2;
+	padding-bottom: @margin-s;
 }
 
 .page-header__code-decoration {
@@ -30,7 +30,7 @@ body > header {
 
 
 .page-header__title {
-	padding-top: @default-margin / 2;
+	padding-top: @margin-s;
 	color: @code-text;
 	padding-bottom: @line-height + 0.4;
 }
@@ -53,7 +53,7 @@ body > header {
 }
 
 .page-header__nav {
-	margin-bottom: @default-margin;
+	margin-bottom: @margin-m;
 
 	& ul {
 		margin-bottom: 0;
@@ -116,11 +116,11 @@ body > header {
 
 @media screen and (min-width: @screen-small) {
 	.page-header__nav {
-		padding-bottom: @default-margin;
+		padding-bottom: @margin-m;
 	}
 
 	.page-header__title {
-		padding-top: @default-margin;
+		padding-top: @margin-m;
 		padding-bottom: @line-height + 0.4;
 	}
 
