--- a/src/styles/typography.less
+++ b/src/styles/typography.less
@@ -108,6 +108,8 @@ button {
 	padding: 0.5rem;
 	font-family: @monospace-prefered;
 	font-size: 1rem;
+	margin-top: 0.55rem;
+	margin-bottom: 0.55rem;
 }
 
 pre code {
