--- a/src/styles/variables.less
+++ b/src/styles/variables.less
@@ -11,7 +11,9 @@
 @char-width: 0.625rem;
 @line-height: 1.75rem;
 
-@default-margin: @line-height * 2;
+@margin-s: @line-height;
+@margin-m: @line-height * 2;
+@margin-l: @line-height * 3;
 
 @markdown-decoration-fade: 0.5;
 @alert-fade: 50%;
