--- a/src/views/_base.html
+++ b/src/views/_base.html
@@ -26,6 +26,8 @@
 		<meta property="og:title" content="{% if page.path === 'index'%}{{ site.title }} | {{ site.subtitle }}{% else %}{{ page.title }} | {{ site.title }}{% endif %}">
 		<meta property="og:type" content="article">
 		<meta property="og:image" content="{% if page.featuredimage %}{{ page.permalink }}{{ page.featuredimage}}{% else %}{{ site.gravatar }}{% endif %}">
+		
+		<meta name="google-site-verification" content="nqrUK41xnH-Xy6jkKrFZaB7WepOc-53Nein0KOSwizo" />
 
 		{% if page.tags.length > 0 %}
 			<meta name="keywords" content="{% for tag in page.tags %}{{ tag.name }}{% if not loop.last %}, {% endif %}{% endfor %}">
