--- a/src/views/_base.html
+++ b/src/views/_base.html
@@ -54,5 +54,9 @@
 		{% include 'components/font-face-observer/footer.html' %}
 
 		<div class="debug-vertial-rythm"></div>
+
+		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-45961555-1"></script>
+		<script>window.dataLayer = window.dataLayer || [];function gtag(){dataLayer.push(arguments);}gtag('js', new Date());gtag('config', 'UA-45961555-1');</script>
+
 	</body>
 </html>
