--- a/src/views/_base.html
+++ b/src/views/_base.html
@@ -6,6 +6,7 @@
 		<link rel="manifest" href="/web-manifest.json">
 
 		<link rel="me" href="{{ site.social.googlePlus.url }}">
+		<link rel="me" href="{{ site.social.tootCafe.url }}">
 		<link rel="canonical" href="{{ page.permalink }}">
 		<link rel="shortcut icon" href="/assets/logo/logo-32.png" />
 		
