fix lighthouse issues

--- a/src/styles/variables.less
+++ b/src/styles/variables.less
@@ -20,7 +20,7 @@
 @default-text-color: #444444;
 @background-color: #FAFAFA;
 @dark-background-text: #BED5DD;
-@link-color: #1976D2;
+@link-color: #014cbd;
 @error-color: #F44336;
 @success-color: #8BC34A;
 @inline-code-color: #fa516d;
