--- a/src/styles/typography.less
+++ b/src/styles/typography.less
@@ -9,6 +9,7 @@
          url('/assets/fonts/FiraCode-Light.ttf') format('truetype');
     font-weight: 300;
     font-style: normal;
+    font-display: swap;
 }
 
 @font-face{
@@ -20,6 +21,7 @@
          url('/assets/fonts/FiraCode-Regular.ttf') format('truetype');
     font-weight: 400;
     font-style: normal;
+    font-display: swap;
 }
 
 @font-face{
@@ -31,6 +33,7 @@
          url('/assets/fonts/FiraCode-Medium.ttf') format('truetype');
     font-weight: 500;
     font-style: normal;
+    font-display: swap;
 }
 
 @font-face{
@@ -42,6 +45,7 @@
          url('/assets/fonts/FiraCode-Bold.ttf') format('truetype');
     font-weight: 700;
     font-style: normal;
+    font-display: swap;
 }
 
 .fonts-loaded body {
