remove fontfaceobserver in favour of font-display: swap;

--- a/src/styles/variables.less
+++ b/src/styles/variables.less
@@ -1,6 +1,6 @@
 @serif: Georgia, Times, 'Times New Roman', serif;
-@sans-serif: 'Fira Code', sans-serif;
-@monospace-prefered: 'Fira Code';
+@sans-serif: 'Fira Code', 'Courier New', monospace;
+@monospace-prefered: 'Fira Code', 'Courier New', monospace;
 @monospace: 'Courier New', monospace;
 
 @screen-xsmall: 18em; // 288px
