--- a/src/styles/typography.less
+++ b/src/styles/typography.less
@@ -2,11 +2,8 @@
 
 @font-face{
     font-family: 'Fira Code';
-    src: url('/assets/fonts/FiraCode-Light.eot');
-    src: url('/assets/fonts/FiraCode-Light.eot') format('embedded-opentype'),
-		 url('/assets/fonts/FiraCode-Light.woff2') format('woff2'),
-		 url('/assets/fonts/FiraCode-Light.woff') format('woff'),
-         url('/assets/fonts/FiraCode-Light.ttf') format('truetype');
+    src: url('/assets/fonts/FiraCode-Light.woff2') format('woff2'),
+		 url('/assets/fonts/FiraCode-Light.woff') format('woff');
     font-weight: 300;
     font-style: normal;
     font-display: swap;
@@ -14,11 +11,8 @@
 
 @font-face{
     font-family: 'Fira Code';
-    src: url('/assets/fonts/FiraCode-Regular.eot');
-    src: url('/assets/fonts/FiraCode-Regular.eot') format('embedded-opentype'),
-         url('/assets/fonts/FiraCode-Regular.woff2') format('woff2'),
-		 url('/assets/fonts/FiraCode-Regular.woff') format('woff'),
-         url('/assets/fonts/FiraCode-Regular.ttf') format('truetype');
+    src: url('/assets/fonts/FiraCode-Regular.woff2') format('woff2'),
+		 url('/assets/fonts/FiraCode-Regular.woff') format('woff');
     font-weight: 400;
     font-style: normal;
     font-display: swap;
@@ -26,11 +20,8 @@
 
 @font-face{
     font-family: 'Fira Code';
-    src: url('/assets/fonts/FiraCode-Medium.eot');
-    src: url('/assets/fonts/FiraCode-Medium.eot') format('embedded-opentype'),
-    	 url('/assets/fonts/FiraCode-Medium.woff2') format('woff2'),
-		 url('/assets/fonts/FiraCode-Medium.woff') format('woff'),
-         url('/assets/fonts/FiraCode-Medium.ttf') format('truetype');
+    src: url('/assets/fonts/FiraCode-Medium.woff2') format('woff2'),
+		 url('/assets/fonts/FiraCode-Medium.woff') format('woff');
     font-weight: 500;
     font-style: normal;
     font-display: swap;
@@ -38,22 +29,15 @@
 
 @font-face{
     font-family: 'Fira Code';
-    src: url('/assets/fonts/FiraCode-Bold.eot');
-    src: url('/assets/fonts/FiraCode-Bold.eot') format('embedded-opentype'),
-    	 url('/assets/fonts/FiraCode-Bold.woff2') format('woff2'),
-		 url('/assets/fonts/FiraCode-Bold.woff') format('woff'),
-         url('/assets/fonts/FiraCode-Bold.ttf') format('truetype');
+    src: url('/assets/fonts/FiraCode-Bold.woff2') format('woff2'),
+		 url('/assets/fonts/FiraCode-Bold.woff') format('woff');
     font-weight: 700;
     font-style: normal;
     font-display: swap;
 }
 
-.fonts-loaded body {
-	font-family: @monospace-prefered;
-}
-
 body {
-	font-family: @monospace;
+	font-family: @monospace-prefered;
 	color: @default-text-color;
 	background-color: @background-color;
 	line-height: @line-height;
