fix some lighthouse issues

--- a/src/components/sociallinks/sociallinks.less
+++ b/src/components/sociallinks/sociallinks.less
@@ -4,6 +4,12 @@
 
 .sociallinks--inline {
 	.sociallinks__item {
-		display: inline-block;
-	}
+    display: inline-block;
+    padding-top: 0.5rem;
+    padding-bottom: 0.5rem;
+  }
+  
+  .sociallinks__item:not(:first-child) {
+    margin-left: 0.5rem;
+  }
 }
