--- a/src/views/_base.html
+++ b/src/views/_base.html
@@ -6,7 +6,8 @@
 		<link rel="manifest" href="/web-manifest.json">
 
 		<link rel="canonical" href="{{ page.permalink }}">
-		<link rel="shortcut icon" href="/assets/logo/logo-32.png" />
+    <link rel="shortcut icon" href="/assets/logo/logo-32.png" />
+    <link rel="apple-touch-icon" href="/assets/logo/logo-192.png">
 		
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 		
