--- a/src/views/_base.html
+++ b/src/views/_base.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
 	<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    
 		<title>{% if page.path === 'index'%}{{ site.title }} | {{ site.subtitle }}{% else %}{{ page.title }} | {{ site.title }}{% endif %}</title>
 		
 		<link rel="manifest" href="/web-manifest.json">
@@ -12,7 +15,6 @@
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 		
 		<meta name="theme-color" content="{{ site.themeColor }}">
-		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<meta name="description" content="{{ page.description }}">
 		
 		<meta name="twitter:card" content="summary_large_image">
