--- a/src/components/header/header.html
+++ b/src/components/header/header.html
@@ -1,7 +1,7 @@
 <header data-header>
 <div class="page-header">
 	<h1 class="page-header__title">
-		<a href="/" class="page-header__link">
+		<a href="/" class="page-header__link" aria-label="Peter Goes, Front-end Developer home page">
 			<span class="page-header__name"><span class="page-header__code-decoration" aria-hidden="true" role="presentation" tabindex="-1">.</span>peter-goes</span> <span class="page-header__code-decoration" aria-hidden="true" role="presentation">{</span> 
 				<span class="page-header__occupation">
 					<span class="page-header__property">frontEnd</span><span class="page-header__code-decoration" aria-hidden="true" role="presentation">:</span> <span class="page-header__property--value">developer</span><span class="page-header__code-decoration" aria-hidden="true" role="presentation">;</span></span>
@@ -16,7 +16,7 @@
 			{% for link in site.data.mainmenu %}
 			<li class="page-header__link-container">
 				<a href="{{ link.uri }}" class="page-header__link">
-					<span class="page-header__code-decoration" aria-hidden="true" role="presentation">&lt;<span class="page-header__element">a</span> href&equals;</span><span class="page-header__string">&quot;{{ link.label }}&quot;</span><span class="page-header__code-decoration" aria-hidden="true" role="presentation">&gt;&lt;&sol;<span class="page-header__element">a</span>&gt;</span>
+					<span class="page-header__code-decoration" aria-hidden="true" role="presentation">&lt;<span class="page-header__element">a</span> href&equals;</span><span class="page-header__string"><span aria-hidden="true" role="presentation">&quot;</span>{{ link.label }}<span aria-hidden="true" role="presentation">&quot;</span></span><span class="page-header__code-decoration" aria-hidden="true" role="presentation">&gt;&lt;&sol;<span class="page-header__element">a</span>&gt;</span>
 				</a>
 			</li>	
 			{% endfor %}
