--- a/src/components/sociallinks/sociallinks.html
+++ b/src/components/sociallinks/sociallinks.html
@@ -1,7 +1,14 @@
 <ul class="sociallinks--inline">
 	{% for name, link in site.social %}
 		<li class="sociallinks__item">
-			<a rel="me nofollow noopener" href="{{ link.url }}" target="_blank">{{ link.name }}</a>
+      <a
+        rel="me nofollow noopener"
+        href="{{ link.url }}"
+        target="_blank"
+        aria-label="My {{ link.name }} profile"
+      >
+        {{ link.name }}
+      </a>
 		</li>	
 	{% endfor %}
 </ul>
