--- a/src/views/_base.html
+++ b/src/views/_base.html
@@ -55,6 +55,13 @@
 
 		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-45961555-1"></script>
 		<script>window.dataLayer = window.dataLayer || [];function gtag(){dataLayer.push(arguments);}gtag('js', new Date());gtag('config', 'UA-45961555-1');</script>
+    <script>
+      if ('serviceWorker' in navigator) {
+        window.addEventListener('load', () => {
+          navigator.serviceWorker.register('/sw.js');
+        });
+      }
+      </script>
 
 	</body>
 </html>
