--- a/src/styles/typography.less
+++ b/src/styles/typography.less
@@ -98,6 +98,10 @@ button {
 	font-size: 1rem;
 	margin-top: 0.55rem;
 	margin-bottom: 0.55rem;
+  cursor: pointer;
+}
+button:active {
+  font-weight: bold;
 }
 
 pre code {
