Hide markdown decorations from screenreaders

--- a/src/styles/variables.less
+++ b/src/styles/variables.less
@@ -15,7 +15,7 @@
 @margin-m: @line-height * 2;
 @margin-l: @line-height * 3;
 
-@markdown-decoration-fade: 0.5;
+@markdown-decoration-fade: 0.4;
 @alert-fade: 50%;
 @default-text-color: #444444;
 @background-color: #FAFAFA;
@@ -23,7 +23,7 @@
 @link-color: #014cbd;
 @error-color: #F44336;
 @success-color: #8BC34A;
-@inline-code-color: #fa516d;
+@inline-code-color: #c94158;
 
 // code highlight
 @code-background: #263238;
