--- a/src/views/_base.html
+++ b/src/views/_base.html
@@ -87,7 +87,7 @@
           navigator.serviceWorker.register('/sw.js');
         });
       }
-      </script>
-
+    </script>
+    <link rel="stylesheet" href="/styles/markdown-decorations.css">
 	</body>
 </html>
