--- a/src/styles/typography.less
+++ b/src/styles/typography.less
@@ -54,9 +54,16 @@ p {
 	margin-bottom: @line-height;
 }
 
+strong, em, i, code {
+  position: relative;
+  padding: 0 .65em;
+}
+
 a {
 	color: @link-color;
 	text-decoration: none;
+  position: relative;
+  padding: 0 .65em;
 
 	h1:before, .h1:before,
 	h2:before, .h2:before,
@@ -120,16 +127,26 @@ pre code {
 
 code {
 	color: @inline-code-color;
+  position: relative;
 
-	&:before {
-		content: '`';
-		opacity: @markdown-decoration-fade;
+	&:before,
+  &:after {
+		content: '';
+    position: absolute;
+    display: inline-block;
+    left: 0;
+    top: 50%;
+    background-size: contain;
+    background-repeat: no-repeat;
+    width: 2ch;
+    height: 1.5em;
+    transform: translateY(-55%);
 	}
-
-	&:after {
-		content: '`';
-		opacity: @markdown-decoration-fade;
-	}
+  &:after {
+    right: 0;
+    left: initial;
+    transform: translate(0.55em, -55%);
+  }
 }
 
 .fonts-loaded code {
@@ -139,55 +156,116 @@ code {
 @media screen {
 	h1, .h1 {
 		&:before {
-			content: '# ';
+			content: '';
+      display: inline-block;
+      color: @default-text-color;
+      background-size: contain;
+      background-repeat: no-repeat;
+      width: 2ch;
+      height: 1.5rem;
 			opacity: @markdown-decoration-fade;
+      transform: translateY(0.4em);
 		}
 	}
 
 	h2, .h2 {
 		&:before {
-			content: '## ';
+			content: '';
+      display: inline-block;
+      color: @default-text-color;
+      background-size: contain;
+      background-repeat: no-repeat;
+      width: 3ch;
+      height: 1.5rem;
 			opacity: @markdown-decoration-fade;
+      transform: translateY(0.4em);
 		}
 	}
 
 	h3, .h3 {
 		&:before {
-			content: '### ';
+			content: '';
+      display: inline-block;
+      color: @default-text-color;
+      background-size: contain;
+      background-repeat: no-repeat;
+      width: 4ch;
+      height: 1.5rem;
 			opacity: @markdown-decoration-fade;
+      transform: translateY(0.4em);
 		}
 	}
 
 	h4, .h4 {
 		&:before {
-			content: '#### ';
+			content: '';
+      display: inline-block;
+      color: @default-text-color;
+      background-image: url('data:image/svg+xml;utf8,<svg width="79px" height="48px" viewBox="0 0 79 48" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd"><path d="M20.0205128,23.345641 L16.1148718,23.345641 L15.294359,29.8441026 L20.0205128,29.8441026 L20.0205128,33.2574359 L14.8348718,33.2574359 L14.2112821,38 L9.92820513,38 L10.5517949,33.2574359 L7.43384615,33.2574359 L6.81025641,38 L2.52717949,38 L3.11794872,33.2574359 L1.16512821,33.2574359 L1.16512821,29.8441026 L3.5774359,29.8441026 L4.43076923,23.345641 L2.37948718,23.345641 L2.37948718,19.9158974 L4.89025641,19.9158974 L5.48102564,15.2553846 L9.79692308,15.2553846 L9.15692308,19.9158974 L12.2912821,19.9158974 L12.9148718,15.2553846 L17.1979487,15.2553846 L16.574359,19.9158974 L20.0205128,19.9158974 L20.0205128,23.345641 Z M8.71384615,23.345641 L7.86051282,29.8441026 L10.9784615,29.8441026 L11.8317949,23.345641 L8.71384615,23.345641 Z M39.7128205,23.345641 L35.8071795,23.345641 L34.9866667,29.8441026 L39.7128205,29.8441026 L39.7128205,33.2574359 L34.5271795,33.2574359 L33.9035897,38 L29.6205128,38 L30.2441026,33.2574359 L27.1261538,33.2574359 L26.5025641,38 L22.2194872,38 L22.8102564,33.2574359 L19.3641026,33.2574359 L19.3641026,29.8441026 L23.2697436,29.8441026 L24.1230769,23.345641 L19.3641026,23.345641 L19.3641026,19.9158974 L24.5825641,19.9158974 L25.1733333,15.2553846 L29.4892308,15.2553846 L28.8492308,19.9158974 L31.9835897,19.9158974 L32.6071795,15.2553846 L36.8902564,15.2553846 L36.2666667,19.9158974 L39.7128205,19.9158974 L39.7128205,23.345641 Z M28.4061538,23.345641 L27.5528205,29.8441026 L30.6707692,29.8441026 L31.5241026,23.345641 L28.4061538,23.345641 Z M59.4051282,23.345641 L55.4994872,23.345641 L54.6789744,29.8441026 L59.4051282,29.8441026 L59.4051282,33.2574359 L54.2194872,33.2574359 L53.5958974,38 L49.3128205,38 L49.9364103,33.2574359 L46.8184615,33.2574359 L46.1948718,38 L41.9117949,38 L42.5025641,33.2574359 L39.0564103,33.2574359 L39.0564103,29.8441026 L42.9620513,29.8441026 L43.8153846,23.345641 L39.0564103,23.345641 L39.0564103,19.9158974 L44.2748718,19.9158974 L44.865641,15.2553846 L49.1815385,15.2553846 L48.5415385,19.9158974 L51.6758974,19.9158974 L52.2994872,15.2553846 L56.5825641,15.2553846 L55.9589744,19.9158974 L59.4051282,19.9158974 L59.4051282,23.345641 Z M48.0984615,23.345641 L47.2451282,29.8441026 L50.3630769,29.8441026 L51.2164103,23.345641 L48.0984615,23.345641 Z M77.6369231,23.345641 L75.1917949,23.345641 L74.3712821,29.8441026 L76.4225641,29.8441026 L76.4225641,33.2574359 L73.9117949,33.2574359 L73.2882051,38 L69.0051282,38 L69.6287179,33.2574359 L66.5107692,33.2574359 L65.8871795,38 L61.6041026,38 L62.1948718,33.2574359 L58.7487179,33.2574359 L58.7487179,29.8441026 L62.654359,29.8441026 L63.5076923,23.345641 L58.7487179,23.345641 L58.7487179,19.9158974 L63.9671795,19.9158974 L64.5579487,15.2553846 L68.8738462,15.2553846 L68.2338462,19.9158974 L71.3682051,19.9158974 L71.9917949,15.2553846 L76.2748718,15.2553846 L75.6512821,19.9158974 L77.6369231,19.9158974 L77.6369231,23.345641 Z M67.7907692,23.345641 L66.9374359,29.8441026 L70.0553846,29.8441026 L70.9087179,23.345641 L67.7907692,23.345641 Z" fill="currentColor" fill-rule="nonzero"></path></g></svg>');
+      background-size: contain;
+      background-repeat: no-repeat;
+      width: 5ch;
+      height: 1.5rem;
 			opacity: @markdown-decoration-fade;
+      transform: translateY(0.4em);
 		}
 	}
 
 	h5, .h5 {
 		&:before {
-			content: '##### ';
+			content: '';
+      display: inline-block;
+      color: @default-text-color;
+      background-size: contain;
+      background-repeat: no-repeat;
+      width: 6ch;
+      height: 1.5rem;
 			opacity: @markdown-decoration-fade;
+      transform: translateY(0.4em);
 		}
 	}
 
 	h6, .h6 {
 		&:before {
-			content: '####### ';
+			content: '';
+      display: inline-block;
+      color: @default-text-color;
+      background-size: contain;
+      background-repeat: no-repeat;
+      width: 7ch;
+      height: 1.5rem;
 			opacity: @markdown-decoration-fade;
+      transform: translateY(0.4em);
 		}
 	}
 
 	a:before {
-		content: '[';
-		opacity: @markdown-decoration-fade;
-		color: @default-text-color;
+		content: '';
+    position: absolute;
+    display: inline-block;
+    left: 0;
+    top: 50%;
+    color: @default-text-color;
+    background-size: contain;
+    background-repeat: no-repeat;
+    width: 2ch;
+    height: 1.5em;
+    opacity: @markdown-decoration-fade;
+    transform: translateY(-55%);
 	}
 	a:after {
-		content: ']';
-		opacity: @markdown-decoration-fade;
-		color: @default-text-color;
+		content: '';
+    position: absolute;
+    display: inline-block;
+    right: 0;
+    top: 50%;
+    color: @default-text-color;
+    background-size: contain;
+    background-repeat: no-repeat;
+    width: 2ch;
+    height: 1.5em;
+    opacity: @markdown-decoration-fade;
+    transform: translate(0.55em, -55%);
 	}
 
 	.headerlink:before,
@@ -197,17 +275,41 @@ code {
 
 	strong:before,
 	strong:after {
-		content: '*';
-		opacity: @markdown-decoration-fade;
-		color: @default-text-color;
+		content: '';
+    position: absolute;
+    display: inline-block;
+    left: 0;
+    color: @default-text-color;
+    background-size: contain;
+    background-repeat: no-repeat;
+    width: 2ch;
+    height: 1.5em;
+    opacity: @markdown-decoration-fade;
 	}
+  strong:after {
+    right: 0;
+    left: initial;
+    transform: translate(0.55em);
+  }
 
 	em:before, i:before,
 	em:after, i:after {
-		content: '_';
-		opacity: @markdown-decoration-fade;
-		color: @default-text-color;
+		content: '';
+    position: absolute;
+    display: inline-block;
+    left: 0;
+    color: @default-text-color;
+    background-size: contain;
+    background-repeat: no-repeat;
+    width: 2ch;
+    height: 1.5em;
+    opacity: @markdown-decoration-fade;
 	}
+  em:after, i:after {
+    right: 0;
+    left: initial;
+    transform: translate(0.55em);
+  }
 
 	ol {
 		counter-reset:li; /* Initiate a counter */
@@ -226,10 +328,21 @@ code {
 		margin-bottom: @line-height;
 	}
 
-	li:before {
-		content: '* ';
-		opacity: @markdown-decoration-fade;
-		color: @default-text-color;
+  ol li:before {
+    color: @default-text-color;
+    opacity: @markdown-decoration-fade;
+  }
+
+	ul li:before {
+		content: '';
+    display: inline-block;
+    left: 0;
+    color: @default-text-color;
+    background-size: contain;
+    background-repeat: no-repeat;
+    width: 2ch;
+    height: 1.5em;
+    opacity: @markdown-decoration-fade;
 	}
 }
 
