--- a/_includes/components/sociallinks/sociallinks.njk
+++ b/_includes/components/sociallinks/sociallinks.njk
@@ -1,13 +1,16 @@
-<ul class="sociallinks--inline">
-	{% for name, link in socialLinks %}
-		<li class="sociallinks__item">
-      <a
-        rel="me nofollow noopener"
-        href="{{ link.url }}"
-        target="_blank"
-      >
-        <span class="visuallyhidden">My&nbsp;</span>{{ link.name }}<span class="visuallyhidden">&nbsp;profile</span>
-      </a>
-		</li>	
-	{% endfor %}
-</ul>
+<nav aria-labelledby="social-links-title">
+  <span id="social-links-title" class="visuallyhidden">Social media links</span>
+  <ul class="sociallinks--inline">
+    {% for name, link in socialLinks %}
+      <li class="sociallinks__item">
+        <a
+          rel="me nofollow noopener"
+          href="{{ link.url }}"
+          target="_blank"
+        >
+          <span class="visuallyhidden">My&nbsp;</span>{{ link.name }}<span class="visuallyhidden">&nbsp;profile</span>
+        </a>
+      </li>	
+    {% endfor %}
+  </ul>
+</nav>
