Add feed link to overview pages

--- a/_includes/overview.njk
+++ b/_includes/overview.njk
@@ -18,4 +18,8 @@
     </article>
     {% endif %}
   {%- endfor -%}
+
+  <aside>
+    <a href="/{{page.fileSlug}}/feed.xml">{{title}} RSS feed</a>
+  </aside>
 {% endblock %}
