Tweak feed descriptions

--- a/content/feeds/blog-rss.njk
+++ b/content/feeds/blog-rss.njk
@@ -5,7 +5,7 @@
   "metadata": {
     "title": "PeterGoes.nl Blog",
     "subtitle": "My personal blog on the web",
-    "url": "https://www.petergoes.nl/",
+    "url": "https://www.petergoes.nl/blog",
     "feedUrl": "https://www.petergoes.nl/blog/feed.xml",
     "author": {
       "name": "Peter Goes"
