--- a/_includes/css/main.css
+++ b/_includes/css/main.css
@@ -1,1 +1,3 @@
-main {}
+@import '../components/footer/footer.css';
+@import '../components/header/header.css';
+@import '../components/sociallinks/sociallinks.css';
