--- a/_includes/_base.njk
+++ b/_includes/_base.njk
@@ -6,7 +6,7 @@
     
 		<title>{% if page.url === '/'%}{{ site.title }} | {{ site.subtitle }}{% else %}{{ title }} | {{ site.title }}{% endif %}</title>
 		
-		<link rel="manifest" href="/web-manifest.json">
+		<link rel="manifest" href="/manifest.json">
 
 		<link rel="canonical" href="{{ site.url }}{{ page.url }}">
     <link rel="shortcut icon" href="/assets/logo/logo-32.png" />
