Add image plugin

--- a/content/_files/manifest.njk
+++ b/content/_files/manifest.njk
@@ -10,5 +10,6 @@ eleventyExcludeFromCollections: true
   "orientation": "any",
   "background_color": "{{ site.themeColor }}",
   "theme_color": "{{ site.themeColor }}",
-  "description": "{{ site.description }}"
+  "description": "{{ site.description }}",
+  "icons": {% imageManifest '_assets/logo.svg' %}
 }
